change events to form submit

--- a/html/postto.html
+++ b/html/postto.html
@@ -6,8 +6,10 @@
   </head>
   <body class="hnpost">
     <h1 class="hnpost__header">post this page to Hacker News?</h1>
-    <input class="hnpost__input js-title" placeholder="Title (optional)..."></input>
-    <a href="#" class="hnpost__button js-click">Post!</a>
+    <form class="js-form">
+        <input type="text" class="hnpost__input js-title" placeholder="Title (optional)..."></input>
+        <button type="submit" class="hnpost__button js-click">Post!</button>
+    </form>
     <script src="../js/postto.js"></script>
   </body>
 </html>
